--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,15 +79,15 @@ h6,
 }
 
 .hero-img-1 {
-    background-image: url(/media/page-designs/hero-1.jpg);
+    background-image: url(/media/hero-1.jpg);
 }
 
 .hero-img-2 {
-    background-image: url(/media/page-designs/hero-2.jpg);
+    background-image: url(/media/hero-2.jpg);
 }
 
 .hero-img-3 {
-    background-image: url(/media/page-designs/hero-3.jpg);
+    background-image: url(/media/hero-3.jpg);
 }
 
 .hero-box {
